@@ -101,6 +101,12 @@ Collapses the entire tree.
 
 Tries to expand as much of the given path as possible, so that the filename or directory is visible in the tree control.
 
+\membersection{wxGenericDirCtrl::CollapsePath}\label{wxgenericdirctrlcollapsepath}
+
+\func{bool}{CollapsePath}{\param{const wxString\& }{path}}
+
+Collapse the given path.
+
 \membersection{wxGenericDirCtrl::GetDefaultPath}\label{wxgenericdirctrlgetdefaultpath}
 
 \constfunc{wxString}{GetDefaultPath}{\void}
